--- a/style.css
+++ b/style.css
@@ -77,3 +77,11 @@ h3 {
   padding: 30px;
   margin: 40px;
 }
+
+footer {
+  border-top: 1px solid #f9f7fe;
+  text-align: center;
+  padding-top: 15px;
+
+  color: rgba(39, 33, 66, 0.4);
+}
