--- a/style.css
+++ b/style.css
@@ -46,7 +46,9 @@ header {
 
 h1,
 h2,
-h3 {
+h3,
+h4,
+h5 {
   margin-block-start: 30px;
   font-weight: 500;
   color: #007cb9;
@@ -56,9 +58,10 @@ h3 {
 }
 
 h2,
-h3 {
+h3,
+h4,
+h5 {
   font-size: 1.25em;
-  font-weight: 400;
   line-height: 24px;
 }
 
@@ -84,6 +87,13 @@ h3 {
   border-radius: 40px;
   padding: 30px;
   margin: 40px;
+}
+
+img {
+  display: block;
+  position: relative;
+  width: 80px;
+  height: 80px;
 }
 
 footer {
